--- a/Smart-Guard-Fronted/package.json
+++ b/Smart-Guard-Fronted/package.json
@@ -12,6 +12,7 @@
     "@primeuix/themes": "^1.1.1",
     "@tailwindcss/vite": "^4.1.5",
     "pinia": "^3.0.2",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
     "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
