--- a/Smart-Guard-Fronted/package.json
+++ b/Smart-Guard-Fronted/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primeuix/themes": "^1.1.1",
     "@tailwindcss/vite": "^4.1.5",
+    "chart.js": "^4.4.9",
     "pinia": "^3.0.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
