add: i hate you ts

--- a/Smart-Guard-Fronted/package.json
+++ b/Smart-Guard-Fronted/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.3.3",
+    "@types/node": "^22.15.18",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
